<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_quiz_taker1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uwaterloo.grouptalk.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_height="0dp"
        android:id="@+id/imageView"
        android:src="@drawable/group_talk1"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"/>

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/userIdLinearLayout"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:layout_weight="1"
        android:text="@string/account"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/loginUserId"
        android:labelFor="@+id/loginUserId"
        android:layout_weight="1"
        android:ellipsize="start"
        android:gravity="center"
        android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userIdLinearLayout1"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPassword"
            android:labelFor="@+id/loginPassword"
            android:layout_weight="1"
            android:ellipsize="start"
            android:gravity="center"
            android:background="@drawable/border"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/warning"
        android:textColor="@color/colorPurple500"
        android:textSize="@dimen/warning_size"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:id="@+id/buttonUserLogin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:background="@color/colorAmber500" />

    <Button
        android:text="@string/register"
        android:layout_width="@dimen/width_size"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPurple500"
        android:id="@+id/buttonRegister"
        android:background="@android:color/transparent" />
</LinearLayout>
