<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_run"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/interval"
    android:background="@color/colorBlue50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/app_name"
            android:id="@+id/icon_run"
            android:layout_gravity="start"
            />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_vertical_margin_large"
            android:layout_marginEnd="@dimen/activity_vertical_margin_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/run"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorAmber900"
                android:gravity="center"
                android:id="@+id/logoR" />

            <TextView
                android:id="@+id/showStatusR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:textColor="@color/colorAmber900"
                android:gravity="center"/>

        </LinearLayout>

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="#00000000"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_gravity="end"
            android:contentDescription="@string/app_name"
            android:id="@+id/groupMemberR"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/joinGroup"
                android:background="@drawable/border"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/activity_vertical_margin_large"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/joinR"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/quitGroup"
                android:background="@drawable/border"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/activity_vertical_margin_large"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/quitR" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/new1"
                android:background="@drawable/border"
                android:layout_gravity="bottom"
                android:layout_marginEnd="@dimen/activity_vertical_margin_large"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/newR"
                android:layout_marginTop="100dp"
                />
        </LinearLayout>


        <ListView android:layout_width="220dp"
            android:layout_height="match_parent"
            android:id="@+id/MessageListViewR"
            android:background="@drawable/border"
            android:stackFromBottom="true"
            android:transcriptMode="normal">
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textToGoR"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:background="@drawable/border"
            android:inputType="text"
            android:labelFor="@+id/textToGoR"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/text_margin_small"
            android:paddingEnd="@dimen/text_margin_small"/>

        <Button
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/send"
            android:background="@drawable/border"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/activity_vertical_margin_large"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/sendR" />

    </LinearLayout>

</LinearLayout>
