<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.uwaterloo.grouptalk.RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:orientation="vertical"
    android:background="@color/colorAmber100">

    <TextView
        android:text="@string/please_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeQuizMaster"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/activity_vertical_margin_large"
        android:textSize="18sp"
        android:textColor="@color/colorBlue700"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userIdLinearLayout"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:text="@string/account"
            android:textColor="@color/colorBlue700"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/registerUserId"
            android:labelFor="@+id/registerUserId"
            android:layout_weight="1"
            android:ellipsize="start"
            android:gravity="center"
            android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userIdLinearLayout1"
        android:layout_marginBottom="@dimen/activity_vertical_margin_large">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="@color/colorBlue700"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerPassword"
            android:labelFor="@+id/registerPassword"
            android:layout_weight="1"
            android:ellipsize="start"
            android:gravity="center"
            android:background="@drawable/border"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerSucceed"
        android:textColor="@color/colorBlue700"
        android:textSize="@dimen/warning_size"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:id="@+id/registerButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:background="@color/colorAmber500" />



</LinearLayout>
